src/components/Appbar.css
.appbarLogo {
  width: 40px;
  height: 40px;
  margin-right: 20px;
}

.appbarTitle {
  font-weight: 400;
}

.avatar {
  margin: 10px;
}

.appbarUsername {
  padding: 10px 0px 10px 10px;
}

.appbarLogout {
  padding: 10px;
}

.appbar {
  display: flex;
}
.appbarUser,
.menuUser,
.appbarLogout {
  align-items: center;
  margin: 0 20px;
}
.appbarUser a{
  display: flex;
  align-items: center;
  color: #fff;
  text-decoration: none;
}

.menuUser{
  gap: 0.5em;
}

.menuUser a {
  display: flex;
  align-items: center;
  color: #000;
  text-decoration: none;
  width: 100%;
  gap: 0.5em;
}

.appbarHomePage{
  display: flex;
  align-items: center;
  color: #fff;
  text-decoration: none;
  flex-grow: 1;
}

